<resources>
    <string name="app_name">SuperPlanning</string>
    <string name="your_courses">Your courses:</string>
    <string name="timetable_drawerItem">Timetable</string>
    <string name="addCourse_tableItem">Add Course</string>
    <string name="addCourse_fragmentLabel">Add Course</string>
    <string name="subject_hint">Subject…</string>
    <string name="professor_hint">Professor…</string>
    <string name="classroom_hint">Classroom…</string>
    <string name="datepicker_button">Schedule course</string>
    <string name="validate_button">CREATE</string>
    <string name="promotion_hint">Promotion…</string>
    <string name="not_selected">Not Selected</string>
    <string name="time">Time : </string>
    <string name="date">Date : </string>
    <string name="addSubject">+ Add Subject</string>
    <string name="nothing_selected_subject">Select a subject…</string>
    <string name="select_subject_button">Select subject…</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="select_professor_button">Select professor…</string>
    <string name="select_promotion_button">Select promotion…</string>
    <string name="select_classroom_button">Select classroom…</string>
    <string name="empty_select">"Select "</string>
    <string name="error_getting_data">An error occured. Please try again later.</string>
</resources>